<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/meu_pet"
        android:layout_gravity="center"
        android:textSize="@dimen/texto_16"
        android:layout_margin="@dimen/margem_16"
        android:textAllCaps="true" />

    <ImageView
        android:layout_width="@dimen/largura_200"
        android:layout_height="@dimen/altura_200"
        android:src="@drawable/furao"
        android:layout_margin="@dimen/margem_16"
        android:layout_gravity="center"
        android:contentDescription="@string/descricao_img" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nome_pet"
        android:layout_margin="@dimen/margem_16"
        android:textSize="@dimen/tamanho_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/raca_pet"
        android:layout_margin="@dimen/margem_16"
        android:textSize="@dimen/tamanho_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/idade_pet"
        android:layout_margin="@dimen/margem_16"
        android:textSize="@dimen/tamanho_12" />

    <Button
        android:id="@+id/botao_mensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensagem"
        android:layout_margin="@dimen/margem_16"
        android:backgroundTint="@color/cor_secundaria" />

</LinearLayout>
</ScrollView>